-- =====================================================================
-- Base de datos: juego_draft
-- Generado automáticamente a partir de la lista de planteles provista.
-- =====================================================================

CREATE DATABASE IF NOT EXISTS juego_draft
CHARACTER SET utf8mb4
COLLATE utf8mb4_unicode_ci;

USE juego_draft;

-- ---------------------------------------------------------------------
-- Limpieza (por si se re-ejecuta el script)
-- ---------------------------------------------------------------------
DROP TABLE IF EXISTS resultados;
DROP TABLE IF EXISTS equipo_partida;
DROP TABLE IF EXISTS partidas;
DROP TABLE IF EXISTS plantel_jugadores;
DROP TABLE IF EXISTS jugadores;
DROP TABLE IF EXISTS planteles;
DROP TABLE IF EXISTS mundiales;
DROP TABLE IF EXISTS selecciones;

-- ---------------------------------------------------------------------
-- Tablas de datos "históricos" del draft (equipos campeones y planteles)
-- ---------------------------------------------------------------------

CREATE TABLE selecciones (
  id INT AUTO_INCREMENT PRIMARY KEY,
  nombre VARCHAR(80) NOT NULL UNIQUE
);

CREATE TABLE mundiales (
  id INT AUTO_INCREMENT PRIMARY KEY,
  anio INT NOT NULL UNIQUE
);

CREATE TABLE planteles (
  id INT AUTO_INCREMENT PRIMARY KEY,
  seleccion_id INT NOT NULL,
  mundial_id INT NOT NULL,
  UNIQUE (seleccion_id, mundial_id),
  FOREIGN KEY (seleccion_id) REFERENCES selecciones(id),
  FOREIGN KEY (mundial_id) REFERENCES mundiales(id)
);

CREATE TABLE jugadores (
  id INT AUTO_INCREMENT PRIMARY KEY,
  nombre VARCHAR(60) NOT NULL,
  apellido VARCHAR(60) NOT NULL
);

CREATE TABLE plantel_jugadores (
  id INT AUTO_INCREMENT PRIMARY KEY,
  plantel_id INT NOT NULL,
  jugador_id INT NOT NULL,
  posicion VARCHAR(10) NOT NULL,
  dorsal INT,
  valoracion INT NOT NULL,
  UNIQUE (plantel_id, jugador_id),
  FOREIGN KEY (plantel_id) REFERENCES planteles(id),
  FOREIGN KEY (jugador_id) REFERENCES jugadores(id)
);

-- ---------------------------------------------------------------------
-- Tablas de estado del juego (lo que ocurre cuando alguien juega)
-- ---------------------------------------------------------------------

CREATE TABLE partidas (
  id INT AUTO_INCREMENT PRIMARY KEY,
  nombre_equipo VARCHAR(80) NOT NULL,
  formacion VARCHAR(20) NOT NULL,
  fecha_inicio DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP
);

CREATE TABLE equipo_partida (
  id INT AUTO_INCREMENT PRIMARY KEY,
  partida_id INT NOT NULL,
  plantel_jugador_id INT NOT NULL,
  slot VARCHAR(10) NOT NULL,
  UNIQUE (partida_id, slot),
  UNIQUE (partida_id, plantel_jugador_id),
  FOREIGN KEY (partida_id) REFERENCES partidas(id),
  FOREIGN KEY (plantel_jugador_id) REFERENCES plantel_jugadores(id)
);

CREATE TABLE resultados (
  id INT AUTO_INCREMENT PRIMARY KEY,
  partida_id INT NOT NULL,
  ronda VARCHAR(30) NOT NULL,
  rival VARCHAR(80) NOT NULL,
  goles_favor INT NOT NULL,
  goles_contra INT NOT NULL,
  FOREIGN KEY (partida_id) REFERENCES partidas(id)
);

-- ---------------------------------------------------------------------
-- Datos: selecciones
-- ---------------------------------------------------------------------
INSERT INTO selecciones (id, nombre) VALUES
(1, 'Boca Juniors'),
(2, 'Colón'),
(3, 'Racing Club'),
(4, 'Lanús'),
(5, 'River Plate'),
(6, 'Arsenal de Sarandí'),
(7, 'Argentinos Juniors'),
(8, 'Banfield'),
(9, 'Estudiantes de La Plata'),
(10, 'Newell''s Old Boys'),
(11, 'Independiente');

-- ---------------------------------------------------------------------
-- Datos: mundiales (años en los que un equipo salió campeón)
-- ---------------------------------------------------------------------
INSERT INTO mundiales (id, anio) VALUES
(1, 2022),
(2, 2021),
(3, 2020),
(4, 2019),
(5, 2018),
(6, 2017),
(7, 2016),
(8, 2015),
(9, 2014),
(10, 2013),
(11, 2012),
(12, 2011),
(13, 2010),
(14, 2009),
(15, 2008),
(16, 2007),
(17, 2006),
(18, 2005),
(19, 2004),
(20, 2003),
(21, 2002),
(22, 2001);

-- ---------------------------------------------------------------------
-- Datos: planteles (un club + un año campeón)
-- ---------------------------------------------------------------------
INSERT INTO planteles (id, seleccion_id, mundial_id) VALUES
(1, 1, 1)  -- Boca Juniors 2022,
(2, 2, 2)  -- Colón 2021,
(3, 1, 3)  -- Boca Juniors 2020,
(4, 3, 4)  -- Racing Club 2019,
(5, 1, 5)  -- Boca Juniors 2018,
(6, 1, 6)  -- Boca Juniors 2017,
(7, 4, 7)  -- Lanús 2016,
(8, 1, 8)  -- Boca Juniors 2015,
(9, 3, 9)  -- Racing Club 2014,
(10, 5, 10)  -- River Plate 2013,
(11, 6, 11)  -- Arsenal de Sarandí 2012,
(12, 1, 12)  -- Boca Juniors 2011,
(13, 7, 13)  -- Argentinos Juniors 2010,
(14, 8, 14)  -- Banfield 2009,
(15, 5, 15)  -- River Plate 2008,
(16, 4, 16)  -- Lanús 2007,
(17, 9, 17)  -- Estudiantes de La Plata 2006,
(18, 1, 18)  -- Boca Juniors 2005,
(19, 10, 19)  -- Newell''s Old Boys 2004,
(20, 5, 20)  -- River Plate 2003,
(21, 11, 21)  -- Independiente 2002,
(22, 3, 22)  -- Racing Club 2001;

-- ---------------------------------------------------------------------
-- Datos: jugadores (nombre/apellido únicos; un jugador puede repetirse
-- en varios planteles a través de plantel_jugadores)
-- ---------------------------------------------------------------------
INSERT INTO jugadores (id, nombre, apellido) VALUES
(1, 'A.', 'Rossi'),
(2, 'J.', 'Garcia'),
(3, 'L.', 'Brey'),
(4, 'F.', 'Fabra'),
(5, 'A.', 'Sandez'),
(6, 'M.', 'Rojo'),
(7, 'N.', 'Figal'),
(8, 'C.', 'Zambrano'),
(9, 'F.', 'Roncaglia'),
(10, 'L.', 'Advincula'),
(11, 'M.', 'Weigandt'),
(12, 'A.', 'Varela'),
(13, 'G.', 'Fernandez'),
(14, 'O.', 'Romero'),
(15, 'J.', 'Ramirez'),
(16, 'A.', 'Molinas'),
(17, 'E.', 'Rolon'),
(18, 'D.', 'Gonzalez'),
(19, 'C.', 'Medina'),
(20, 'M.', 'Payero'),
(21, 'E.', 'Fernandez'),
(22, 'D.', 'Benedetto'),
(23, 'S.', 'Villa'),
(24, 'L.', 'Langoni'),
(25, 'E.', 'Zeballos'),
(26, 'L.', 'Vazquez'),
(27, 'N.', 'Briasco'),
(28, 'N.', 'Orsini'),
(29, 'G.', 'Morales'),
(30, 'L.', 'Burian'),
(31, 'I.', 'Chicco'),
(32, 'P.', 'Goltz'),
(33, 'F.', 'Garces'),
(34, 'B.', 'Bianchi'),
(35, 'G.', 'Piovi'),
(36, 'E.', 'Meza'),
(37, 'R.', 'Delgado'),
(38, 'F.', 'Mura'),
(39, 'R.', 'Aliendro'),
(40, 'Y.', 'Goez'),
(41, 'F.', 'Lertora'),
(42, 'C.', 'Bernardi'),
(43, 'A.', 'Castro'),
(44, 'L.', 'Rodriguez'),
(45, 'N.', 'Leguizamon'),
(46, 'W.', 'Morelo'),
(47, 'F.', 'Farias'),
(48, 'E.', 'Andrada'),
(49, 'M.', 'Diaz'),
(50, 'M.', 'Roffo'),
(51, 'E.', 'Mas'),
(52, 'C.', 'Izquierdoz'),
(53, 'J.', 'Alonso'),
(54, 'G.', 'Avila'),
(55, 'L.', 'Lopez'),
(56, 'J.', 'Buffarini'),
(57, 'N.', 'Capaldo'),
(58, 'J.', 'Campuzano'),
(59, 'I.', 'Marcone'),
(60, 'A.', 'Almendra'),
(61, 'E.', 'Reynoso'),
(62, 'E.', 'Salvio'),
(63, 'A.', 'Obando'),
(64, 'R.', 'Abila'),
(65, 'C.', 'Tevez'),
(66, 'M.', 'Zarate'),
(67, 'J.', 'Hurtado'),
(68, 'F.', 'Soldano'),
(69, 'G.', 'Arias'),
(70, 'F.', 'Escobar'),
(71, 'A.', 'Soto'),
(72, 'E.', 'Mena'),
(73, 'A.', 'Donatti'),
(74, 'L.', 'Orban'),
(75, 'L.', 'Sigali'),
(76, 'R.', 'Schlegel'),
(77, 'R.', 'Saravia'),
(78, 'I.', 'Pillud'),
(79, 'N.', 'Dominguez'),
(80, 'G.', 'Fernadez'),
(81, 'N.', 'Cardozo'),
(82, 'A.', 'Solari'),
(83, 'M.', 'Zaracho'),
(84, 'M.', 'Ojeda'),
(85, 'J.', 'Lopez'),
(86, 'J.', 'Cristaldo'),
(87, 'M.', 'Casierra'),
(88, 'R.', 'Centurion'),
(89, 'A.', 'Rios'),
(90, 'D.', 'Cvitanich'),
(91, 'G.', 'Bou'),
(92, 'G.', 'Sara'),
(93, 'L.', 'Magallan'),
(94, 'S.', 'Vergini'),
(95, 'A.', 'Heredia'),
(96, 'L.', 'Jara'),
(97, 'F.', 'Gago'),
(98, 'P.', 'Perez'),
(99, 'E.', 'Cardona'),
(100, 'N.', 'Nandez'),
(101, 'W.', 'Barrios'),
(102, 'S.', 'Perez'),
(103, 'G.', 'Maroni'),
(104, 'C.', 'Pavon'),
(105, 'W.', 'Bou'),
(106, 'O.', 'Benitez'),
(107, 'F.', 'Evangelista'),
(108, 'J.', 'Insaurralde'),
(109, 'F.', 'Tobio'),
(110, 'G.', 'Peruzzi'),
(111, 'F.', 'Zuqui'),
(112, 'N.', 'Solis'),
(113, 'A.', 'Chavez'),
(114, 'C.', 'Espinoza'),
(115, 'F.', 'Monetti'),
(116, 'M.', 'Velázquez'),
(117, 'G.', 'Gómez'),
(118, 'D.', 'Braghieri'),
(119, 'J.', 'L.Gómez'),
(120, 'D.', 'Colotto'),
(121, 'R.', 'Erramuspe'),
(122, 'F.', 'Monteseirín'),
(123, 'S.', 'Zurbriggen'),
(124, 'R.', 'Martínez'),
(125, 'M.', 'Almirón'),
(126, 'L.', 'Acosta'),
(127, 'V.', 'Ayala'),
(128, 'N.', 'Aguirre'),
(129, 'F.', 'Barrientos'),
(130, 'J.', 'Valdez Chamorro'),
(131, 'J.', 'Sand'),
(132, 'O.', 'Benítez'),
(133, 'P.', 'Mouche'),
(134, 'M.', 'Moreno'),
(135, 'C.', 'Rius'),
(136, 'D.', 'Stracqualursi'),
(137, 'A.', 'Orion'),
(138, 'S.', 'Trípodi'),
(139, 'C.', 'Díaz'),
(140, 'D.', 'Díaz'),
(141, 'N.', 'Forrester'),
(142, 'J.', 'Cata Díaz'),
(143, 'M.', 'Tobio'),
(144, 'L.', 'Marín'),
(145, 'E.', 'Insúa'),
(146, 'P.', 'Pérez'),
(147, 'C.', 'Lodeiro'),
(148, 'R.', 'Cubas'),
(149, 'F.', 'Cristaldo'),
(150, 'N.', 'Colazo'),
(151, 'A.', 'Cubas'),
(152, 'P.', 'Pérez Guedes'),
(153, 'J.', 'C.Calleri'),
(154, 'C.', 'Pavón'),
(155, 'N.', 'Benito'),
(156, 'S.', 'Palacios'),
(157, 'E.', 'Gigliotti'),
(158, 'S.', 'Saja'),
(159, 'N.', 'Ibáñez'),
(160, 'J.', 'Musso'),
(161, 'L.', 'Lollo'),
(162, 'G.', 'Díaz'),
(163, 'L.', 'Grimi'),
(164, 'Y.', 'Cabral'),
(165, 'N.', 'Sánchez'),
(166, 'F.', 'Cerro'),
(167, 'G.', 'Voboril'),
(168, 'E.', 'Videla'),
(169, 'L.', 'Aued'),
(170, 'N.', 'Acevedo'),
(171, 'D.', 'Villar'),
(172, 'N.', 'Oroz'),
(173, 'N.', 'Acuña'),
(174, 'F.', 'Castillón'),
(175, 'D.', 'Milito'),
(176, 'R.', 'Centurión'),
(177, 'G.', 'Hauche'),
(178, 'L.', 'Vietto'),
(179, 'F.', 'Castro'),
(180, 'M.', 'Barovero'),
(181, 'L.', 'Chichizola'),
(182, 'G.', 'Vega'),
(183, 'G.', 'Mercado'),
(184, 'J.', 'Maidana'),
(185, 'L.', 'Ponzio'),
(186, 'E.', 'Álvarez Balanta'),
(187, 'R.', 'Funes Mori'),
(188, 'A.', 'Romero'),
(189, 'D.', 'Martínez'),
(190, 'C.', 'Carbonero'),
(191, 'C.', 'Ledesma'),
(192, 'M.', 'Kranevitter'),
(193, 'O.', 'Ahumada'),
(194, 'A.', 'Rojas'),
(195, 'M.', 'Rojas'),
(196, 'M.', 'Lanzini'),
(197, 'J.', 'Mora'),
(198, 'T.', 'Gutiérrez'),
(199, 'R.', 'Mora'),
(200, 'F.', 'Cavenaghi'),
(201, 'G.', 'Simeone'),
(202, 'D.', 'Villalva'),
(203, 'C.', 'Campestrini'),
(204, 'H.', 'Nervo'),
(205, 'L.', 'López'),
(206, 'G.', 'Burdisso'),
(207, 'D.', 'Pérez'),
(208, 'J.', 'Cuesta'),
(209, 'D.', 'Braguieri'),
(210, 'C.', 'Corvalán'),
(211, 'M.', 'Casais'),
(212, 'J.', 'Marcone'),
(213, 'G.', 'Capurro'),
(214, 'I.', 'Machuca'),
(215, 'M.', 'Rolle'),
(216, 'D.', 'Torres'),
(217, 'E.', 'Zelaya'),
(218, 'L.', 'Leguizamón'),
(219, 'J.', 'Aquino'),
(220, 'C.', 'Luna'),
(221, 'G.', 'Blanco'),
(222, 'D.', 'Alustiza'),
(223, 'S.', 'Sosa'),
(224, 'J.', 'García'),
(225, 'C.', 'Roncaglia'),
(226, 'R.', 'Schiavi'),
(227, 'C.', 'Rodríguez'),
(228, 'F.', 'Sosa'),
(229, 'E.', 'Somoza'),
(230, 'J.', 'Riquelme'),
(231, 'D.', 'Rivero'),
(232, 'S.', 'Battaglia'),
(233, 'P.', 'Ledesma'),
(234, 'D.', 'Clemente Rodríguez'),
(235, 'G.', 'Paredes'),
(236, 'W.', 'Erbes'),
(237, 'N.', 'Blandi'),
(238, 'S.', 'Araujo'),
(239, 'N.', 'Navarro'),
(240, 'L.', 'Ojeda'),
(241, 'S.', 'Gentiletti'),
(242, 'J.', 'Sabia'),
(243, 'M.', 'Torrén'),
(244, 'N.', 'Berdeja'),
(245, 'J.', 'Prosperi'),
(246, 'M.', 'Cardozo'),
(247, 'S.', 'Pistone'),
(248, 'C.', 'García'),
(249, 'J.', 'Mercier'),
(250, 'N.', 'Oberto'),
(251, 'M.', 'Correa'),
(252, 'G.', 'Machín'),
(253, 'F.', 'Drocco'),
(254, 'P.', 'Hernández'),
(255, 'G.', 'Raymonda'),
(256, 'Facundo', 'Coria'),
(257, 'S.', 'González'),
(258, 'N.', 'Pavlovich'),
(259, 'G.', 'Vargas'),
(260, 'N.', 'Benítez'),
(261, 'C.', 'Lucchetti'),
(262, 'E.', 'Bologna'),
(263, 'C.', 'Santillo'),
(264, 'J.', 'Bustos'),
(265, 'V.', 'López'),
(266, 'M.', 'Bustos'),
(267, 'L.', 'Broggi'),
(268, 'J.', 'Barceló'),
(269, 'E.', 'Gómez'),
(270, 'W.', 'Erviti'),
(271, 'J.', 'Datolo'),
(272, 'R.', 'Méndez'),
(273, 'M.', 'Quinteros'),
(274, 'J.', 'Gómez'),
(275, 'F.', 'Toledo'),
(276, 'M.', 'Barbosa'),
(277, 'S.', 'Silva'),
(278, 'J.', 'Ferreyra'),
(279, 'R.', 'Pavlovich'),
(280, 'J.', 'Barrales'),
(281, 'J.', 'Carrizo'),
(282, 'V.', 'Vega'),
(283, 'P.', 'Ferrari'),
(284, 'E.', 'Tuzzio'),
(285, 'G.', 'Cabral'),
(286, 'A.', 'Ferrero'),
(287, 'M.', 'Facundo'),
(288, 'J.', 'Villagra'),
(289, 'D.', 'Gerlo'),
(290, 'Ó.', 'Ahumada'),
(291, 'M.', 'Abelairas'),
(292, 'D.', 'Buonanotte'),
(293, 'A.', 'Sánchez'),
(294, 'R.', 'Ponzio'),
(295, 'F.', 'Belluschi'),
(296, 'R.', 'Archubi'),
(297, 'A.', 'Ortega'),
(298, 'R.', 'Falcao'),
(299, 'A.', 'Ríos'),
(300, 'S.', 'Villalba'),
(301, 'A.', 'Antonucci'),
(302, 'M.', 'Ruben'),
(303, 'C.', 'Flauquer'),
(304, 'A.', 'Roqué'),
(305, 'R.', 'Grana'),
(306, 'G.', 'Ramírez'),
(307, 'S.', 'Hoyos'),
(308, 'R.', 'Fritzler'),
(309, 'G.', 'Valdez'),
(310, 'J.', 'Ledesma'),
(311, 'M.', 'Herrera'),
(312, 'D.', 'Valeri'),
(313, 'S.', 'Pelletieri'),
(314, 'A.', 'Fritzler'),
(315, 'M.', 'Fritzler'),
(316, 'M.', 'Blanco'),
(317, 'S.', 'Acuña'),
(318, 'S.', 'Ledesma'),
(319, 'G.', 'Castillejos'),
(320, 'D.', 'Salcedo'),
(321, 'M.', 'Andújar'),
(322, 'D.', 'Albil'),
(323, 'P.', 'Angeleri'),
(324, 'D.', 'Desábato'),
(325, 'J.', 'Schiavi'),
(326, 'J.', 'Alayes'),
(327, 'J.', 'Domínguez'),
(328, 'J.', 'Iraola'),
(329, 'C.', 'Letellier'),
(330, 'J.', 'Sosa'),
(331, 'J.', 'Verón'),
(332, 'R.', 'Braña'),
(333, 'C.', 'Benítez'),
(334, 'G.', 'Galván'),
(335, 'H.', 'Bilbao'),
(336, 'D.', 'Galván'),
(337, 'J.', 'C.Alayes'),
(338, 'M.', 'Pavone'),
(339, 'M.', 'Boselli'),
(340, 'M.', 'Sosa'),
(341, 'L.', 'Benítez'),
(342, 'E.', 'Cuevas'),
(343, 'R.', 'Palacio'),
(344, 'P.', 'Abbondanzieri'),
(345, 'J.', 'Cordoba'),
(346, 'H.', 'Ibarra'),
(347, 'M.', 'Clemente Rodríguez'),
(348, 'A.', 'Silvestre'),
(349, 'J.', 'Krupoviesa'),
(350, 'M.', 'Morel Rodríguez'),
(351, 'R.', 'Battaglia'),
(352, 'N.', 'Cardoso'),
(353, 'D.', 'Cagna'),
(354, 'P.', 'Garcia'),
(355, 'A.', 'Guglielminpietro'),
(356, 'M.', 'Palermo'),
(357, 'P.', 'Guillermo'),
(358, 'D.', 'Gigliotti'),
(359, 'M.', 'Delgado'),
(360, 'J.', 'Villar'),
(361, 'L.', 'Pocrnjic'),
(362, 'S.', 'Domínguez'),
(363, 'G.', 'Ré'),
(364, 'L.', 'Vella'),
(365, 'H.', 'Iriarte'),
(366, 'L.', 'Fernández'),
(367, 'A.', 'González'),
(368, 'E.', 'Garay'),
(369, 'G.', 'Marino'),
(370, 'R.', 'Capria'),
(371, 'A.', 'Rosada'),
(372, 'A.', 'Zapata'),
(373, 'D.', 'Manso'),
(374, 'M.', 'Penta'),
(375, 'I.', 'Scocco'),
(376, 'I.', 'Borghello'),
(377, 'H.', 'Steinert'),
(378, 'L.', 'Cereseto'),
(379, 'M.', 'Jardel'),
(380, 'G.', 'Comizzo'),
(381, 'C.', 'Lux'),
(382, 'M.', 'Ayala'),
(383, 'H.', 'Amendola'),
(384, 'D.', 'Tuzzio'),
(385, 'C.', 'Rojas'),
(386, 'J.', 'Mareque'),
(387, 'M.', 'Ferrari'),
(388, 'A.', 'Pereyra'),
(389, 'J.', 'Coudet'),
(390, 'J.', 'Mascherano'),
(391, 'L.', 'González'),
(392, 'E.', 'Coudet'),
(393, 'D.', 'Aimar'),
(394, 'A.', 'Montenegro'),
(395, 'A.', 'D''Alessandro'),
(396, 'M.', 'Salcedo'),
(397, 'D.', 'Turismo'),
(398, 'A.', 'Farias'),
(399, 'J.', 'Montenegro'),
(400, 'R.', 'Roa'),
(401, 'L.', 'Albil'),
(402, 'J.', 'Milito'),
(403, 'G.', 'Rodríguez'),
(404, 'F.', 'Milito'),
(405, 'J.', 'Damonte'),
(406, 'M.', 'Pernía'),
(407, 'L.', 'Montenegro'),
(408, 'D.', 'Insúa'),
(409, 'P.', 'Carrera'),
(410, 'L.', 'Barrientos'),
(411, 'J.', 'Serrizuela'),
(412, 'H.', 'Perico'),
(413, 'A.', 'Frias'),
(414, 'L.', 'Romero'),
(415, 'F.', 'Fernández'),
(416, 'D.', 'Parra'),
(417, 'G.', 'Campagnuolo'),
(418, 'G.', 'Pezutti'),
(419, 'M.', 'Vitali'),
(420, 'F.', 'Maciel'),
(421, 'G.', 'Loeschbor'),
(422, 'C.', 'Úbeda'),
(423, 'G.', 'Bedoya'),
(424, 'C.', 'Arano'),
(425, 'D.', 'Maciel'),
(426, 'J.', 'Lux'),
(427, 'A.', 'Bastía'),
(428, 'G.', 'Barros Schelotto'),
(429, 'J.', 'Chatruc'),
(430, 'A.', 'Viveros'),
(431, 'L.', 'Torres'),
(432, 'D.', 'Loscri'),
(433, 'M.', 'Estévez'),
(434, 'R.', 'Maceratesi'),
(435, 'L.', 'Rueda');

-- ---------------------------------------------------------------------
-- Datos: plantel_jugadores (posición y valoración de cada jugador
-- dentro de cada plantel puntual)
-- ---------------------------------------------------------------------
INSERT INTO plantel_jugadores (id, plantel_id, jugador_id, posicion, dorsal, valoracion) VALUES
(1, 1, 1, 'ARQ', NULL, 85),
(2, 1, 2, 'ARQ', NULL, 72),
(3, 1, 3, 'ARQ', NULL, 64),
(4, 1, 4, 'DEF', NULL, 82),
(5, 1, 5, 'DEF', NULL, 70),
(6, 1, 6, 'DEF', NULL, 84),
(7, 1, 7, 'DEF', NULL, 80),
(8, 1, 8, 'DEF', NULL, 77),
(9, 1, 9, 'DEF', NULL, 75),
(10, 1, 10, 'DEF', NULL, 83),
(11, 1, 11, 'DEF', NULL, 72),
(12, 1, 12, 'MED', NULL, 83),
(13, 1, 13, 'MED', NULL, 80),
(14, 1, 14, 'MED', NULL, 79),
(15, 1, 15, 'MED', NULL, 78),
(16, 1, 16, 'MED', NULL, 70),
(17, 1, 17, 'MED', NULL, 71),
(18, 1, 18, 'MED', NULL, 79),
(19, 1, 19, 'MED', NULL, 80),
(20, 1, 20, 'MED', NULL, 77),
(21, 1, 21, 'MED', NULL, 76),
(22, 1, 22, 'DEL', NULL, 80),
(23, 1, 23, 'DEL', NULL, 83),
(24, 1, 24, 'DEL', NULL, 86),
(25, 1, 25, 'DEL', NULL, 80),
(26, 1, 26, 'DEL', NULL, 78),
(27, 1, 27, 'DEL', NULL, 76),
(28, 1, 28, 'DEL', NULL, 75),
(29, 1, 29, 'DEL', NULL, 70),
(30, 2, 30, 'ARQ', NULL, 83),
(31, 2, 31, 'ARQ', NULL, 70),
(32, 2, 32, 'DEF', NULL, 83),
(33, 2, 33, 'DEF', NULL, 81),
(34, 2, 34, 'DEF', NULL, 78),
(35, 2, 35, 'DEF', NULL, 82),
(36, 2, 36, 'DEF', NULL, 81),
(37, 2, 37, 'DEF', NULL, 77),
(38, 2, 38, 'DEF', NULL, 79),
(39, 2, 39, 'MED', NULL, 88),
(40, 2, 40, 'MED', NULL, 76),

(41, 2, 41, 'MED', NULL, 83),
(42, 2, 42, 'MED', NULL, 84),
(43, 2, 43, 'MED', NULL, 80),
(44, 2, 44, 'DEL', NULL, 91),
(45, 2, 45, 'DEL', NULL, 79),
(46, 2, 46, 'DEL', NULL, 77),
(47, 2, 47, 'DEL', NULL, 82),
(48, 3, 48, 'ARQ', NULL, 88),
(49, 3, 49, 'ARQ', NULL, 77),
(50, 3, 50, 'ARQ', NULL, 70),
(51, 3, 51, 'DEF', NULL, 75),
(52, 3, 4, 'DEF', NULL, 84),
(53, 3, 52, 'DEF', NULL, 84),
(54, 3, 53, 'DEF', NULL, 80),
(55, 3, 54, 'DEF', NULL, 73),
(56, 3, 55, 'DEF', NULL, 81),
(57, 3, 56, 'DEF', NULL, 83),
(58, 3, 11, 'DEF', NULL, 75),
(59, 3, 13, 'MED', NULL, 77),
(60, 3, 57, 'MED', NULL, 79),
(61, 3, 58, 'MED', NULL, 75),
(62, 3, 59, 'MED', NULL, 76),
(63, 3, 60, 'MED', NULL, 74),
(64, 3, 61, 'MED', NULL, 80),
(65, 3, 62, 'MED', NULL, 87),
(66, 3, 63, 'DEL', NULL, 72),
(67, 3, 64, 'DEL', NULL, 81),
(68, 3, 65, 'DEL', NULL, 89),
(69, 3, 66, 'DEL', NULL, 79),
(70, 3, 23, 'DEL', NULL, 83),
(71, 3, 67, 'DEL', NULL, 72),
(72, 3, 68, 'DEL', NULL, 74),
(73, 4, 69, 'ARQ', NULL, 89),
(74, 4, 2, 'ARQ', NULL, 79),
(75, 4, 70, 'ARQ', NULL, 63),
(76, 4, 71, 'DEF', NULL, 78),
(77, 4, 72, 'DEF', NULL, 84),
(78, 4, 73, 'DEF', NULL, 85),
(79, 4, 74, 'DEF', NULL, 75),
(80, 4, 75, 'DEF', NULL, 87),

(81, 4, 76, 'DEF', NULL, 71),
(82, 4, 77, 'DEF', NULL, 83),
(83, 4, 78, 'DEF', NULL, 78),
(84, 4, 49, 'MED', NULL, 86),
(85, 4, 79, 'MED', NULL, 82),
(86, 4, 80, 'MED', NULL, 84),
(87, 4, 81, 'MED', NULL, 83),
(88, 4, 82, 'MED', NULL, 82),
(89, 4, 83, 'MED', NULL, 85),
(90, 4, 84, 'MED', NULL, 71),
(91, 4, 85, 'MED', NULL, 70),
(92, 4, 86, 'DEL', NULL, 81),
(93, 4, 87, 'DEL', NULL, 70),
(94, 4, 88, 'DEL', NULL, 77),
(95, 4, 89, 'DEL', NULL, 75),
(96, 4, 55, 'DEL', NULL, 93),
(97, 4, 90, 'DEL', NULL, 82),
(98, 4, 91, 'DEL', NULL, 77),
(99, 5, 1, 'ARQ', NULL, 82),
(100, 5, 92, 'ARQ', NULL, 70),
(101, 5, 50, 'ARQ', NULL, 60),
(102, 5, 4, 'DEF', NULL, 85),
(103, 5, 51, 'DEF', NULL, 78),
(104, 5, 32, 'DEF', NULL, 81),
(105, 5, 93, 'DEF', NULL, 83),
(106, 5, 94, 'DEF', NULL, 75),
(107, 5, 95, 'DEF', NULL, 70),
(108, 5, 96, 'DEF', NULL, 80),
(109, 5, 56, 'DEF', NULL, 79),
(110, 5, 97, 'MED', NULL, 82),
(111, 5, 98, 'MED', NULL, 83),
(112, 5, 99, 'MED', NULL, 85),
(113, 5, 100, 'MED', NULL, 84),
(114, 5, 101, 'MED', NULL, 83),
(115, 5, 61, 'MED', NULL, 81),
(116, 5, 102, 'MED', NULL, 75),
(117, 5, 103, 'MED', NULL, 70),
(118, 5, 104, 'DEL', NULL, 91),
(119, 5, 22, 'DEL', NULL, 83),
(120, 5, 64, 'DEL', NULL, 85),

(121, 5, 105, 'DEL', NULL, 79),
(122, 5, 65, 'DEL', NULL, 80),
(123, 5, 106, 'DEL', NULL, 76),
(124, 6, 1, 'ARQ', NULL, 81),
(125, 6, 92, 'ARQ', NULL, 76),
(126, 6, 4, 'DEF', NULL, 81),
(127, 6, 107, 'DEF', NULL, 71),
(128, 6, 108, 'DEF', NULL, 83),
(129, 6, 94, 'DEF', NULL, 82),
(130, 6, 93, 'DEF', NULL, 76),
(131, 6, 109, 'DEF', NULL, 80),
(132, 6, 110, 'DEF', NULL, 83),
(133, 6, 96, 'DEF', NULL, 80),
(134, 6, 97, 'MED', NULL, 83),
(135, 6, 98, 'MED', NULL, 80),
(136, 6, 99, 'MED', NULL, 72),
(137, 6, 102, 'MED', NULL, 76),
(138, 6, 101, 'MED', NULL, 80),
(139, 6, 111, 'MED', NULL, 75),
(140, 6, 112, 'MED', NULL, 75),
(141, 6, 103, 'MED', NULL, 74),
(142, 6, 113, 'DEL', NULL, 79),
(143, 6, 104, 'DEL', NULL, 85),
(144, 6, 22, 'DEL', NULL, 93),
(145, 6, 114, 'DEL', NULL, 80),
(146, 6, 105, 'DEL', NULL, 81),
(147, 6, 106, 'DEL', NULL, 77),
(148, 7, 115, 'ARQ', NULL, 82),
(149, 7, 48, 'ARQ', NULL, 75),
(150, 7, 116, 'DEF', NULL, 84),
(151, 7, 117, 'DEF', NULL, 87),
(152, 7, 118, 'DEF', NULL, 84),
(153, 7, 119, 'DEF', NULL, 83),
(154, 7, 120, 'DEF', NULL, 78),
(155, 7, 121, 'DEF', NULL, 76),
(156, 7, 122, 'DEF', NULL, 72),
(157, 7, 123, 'DEF', NULL, 70),
(158, 7, 59, 'MED', NULL, 85),
(159, 7, 124, 'MED', NULL, 84),
(160, 7, 125, 'MED', NULL, 88),

(161, 7, 126, 'MED', NULL, 86),
(162, 7, 127, 'MED', NULL, 80),
(163, 7, 128, 'MED', NULL, 79),
(164, 7, 129, 'MED', NULL, 72),
(165, 7, 130, 'MED', NULL, 70),
(166, 7, 131, 'DEL', NULL, 89),
(167, 7, 132, 'DEL', NULL, 82),
(168, 7, 133, 'DEL', NULL, 79),
(169, 7, 134, 'DEL', NULL, 74),
(170, 7, 135, 'DEL', NULL, 73),
(171, 7, 136, 'DEL', NULL, 72),
(172, 8, 137, 'ARQ', NULL, 82),
(173, 8, 92, 'ARQ', NULL, 76),
(174, 8, 138, 'ARQ', NULL, 70),
(175, 8, 4, 'DEF', NULL, 80),
(176, 8, 110, 'DEF', NULL, 82),
(177, 8, 139, 'DEF', NULL, 78),
(178, 8, 140, 'DEF', NULL, 77),
(179, 8, 141, 'DEF', NULL, 70),
(180, 8, 142, 'DEF', NULL, 81),
(181, 8, 143, 'DEF', NULL, 79),
(182, 8, 144, 'DEF', NULL, 74),
(183, 8, 145, 'DEF', NULL, 72),
(184, 8, 97, 'MED', NULL, 84),
(185, 8, 146, 'MED', NULL, 82),
(186, 8, 147, 'MED', NULL, 81),
(187, 8, 148, 'MED', NULL, 76),
(188, 8, 149, 'MED', NULL, 72),
(189, 8, 150, 'MED', NULL, 75),
(190, 8, 151, 'MED', NULL, 74),
(191, 8, 152, 'MED', NULL, 70),
(192, 8, 65, 'DEL', NULL, 88),
(193, 8, 153, 'DEL', NULL, 82),
(194, 8, 154, 'DEL', NULL, 78),
(195, 8, 155, 'DEL', NULL, 75),
(196, 8, 156, 'DEL', NULL, 74),
(197, 8, 157, 'DEL', NULL, 77),
(198, 9, 158, 'ARQ', NULL, 84),
(199, 9, 159, 'ARQ', NULL, 73),
(200, 9, 160, 'ARQ', NULL, 67),

(201, 9, 161, 'DEF', NULL, 82),
(202, 9, 162, 'DEF', NULL, 78),
(203, 9, 163, 'DEF', NULL, 78),
(204, 9, 164, 'DEF', NULL, 76),
(205, 9, 78, 'DEF', NULL, 75),
(206, 9, 165, 'DEF', NULL, 79),
(207, 9, 166, 'DEF', NULL, 74),
(208, 9, 167, 'DEF', NULL, 70),
(209, 9, 168, 'MED', NULL, 82),
(210, 9, 169, 'MED', NULL, 78),
(211, 9, 170, 'MED', NULL, 74),
(212, 9, 171, 'MED', NULL, 73),
(213, 9, 172, 'MED', NULL, 70),
(214, 9, 173, 'MED', NULL, 81),
(215, 9, 174, 'MED', NULL, 75),
(216, 9, 175, 'DEL', NULL, 86),
(217, 9, 91, 'DEL', NULL, 83),
(218, 9, 176, 'DEL', NULL, 82),
(219, 9, 177, 'DEL', NULL, 78),
(220, 9, 178, 'DEL', NULL, 76),
(221, 9, 179, 'DEL', NULL, 68),
(222, 10, 180, 'ARQ', NULL, 84),
(223, 10, 181, 'ARQ', NULL, 72),
(224, 10, 182, 'ARQ', NULL, 68),
(225, 10, 183, 'DEF', NULL, 79),
(226, 10, 184, 'DEF', NULL, 81),
(227, 10, 185, 'DEF', NULL, 79),
(228, 10, 186, 'DEF', NULL, 80),
(229, 10, 187, 'DEF', NULL, 76),
(230, 10, 188, 'DEF', NULL, 71),
(231, 10, 189, 'DEF', NULL, 72),
(232, 10, 190, 'MED', NULL, 77),
(233, 10, 191, 'MED', NULL, 76),
(234, 10, 192, 'MED', NULL, 71),
(235, 10, 193, 'MED', NULL, 70),
(236, 10, 194, 'MED', NULL, 76),
(237, 10, 195, 'MED', NULL, 73),
(238, 10, 196, 'MED', NULL, 81),
(239, 10, 197, 'MED', NULL, 76),
(240, 10, 198, 'DEL', NULL, 82),

(241, 10, 199, 'DEL', NULL, 78),
(242, 10, 200, 'DEL', NULL, 80),
(243, 10, 201, 'DEL', NULL, 68),
(244, 10, 202, 'DEL', NULL, 72),
(245, 11, 203, 'ARQ', NULL, 81),
(246, 11, 48, 'ARQ', NULL, 72),
(247, 11, 204, 'DEF', NULL, 78),
(248, 11, 205, 'DEF', NULL, 80),
(249, 11, 206, 'DEF', NULL, 78),
(250, 11, 207, 'DEF', NULL, 75),
(251, 11, 208, 'DEF', NULL, 72),
(252, 11, 209, 'DEF', NULL, 74),
(253, 11, 210, 'DEF', NULL, 76),
(254, 11, 211, 'DEF', NULL, 70),
(255, 11, 212, 'MED', NULL, 78),
(256, 11, 213, 'MED', NULL, 76),
(257, 11, 214, 'MED', NULL, 74),
(258, 11, 128, 'MED', NULL, 77),
(259, 11, 190, 'MED', NULL, 76),
(260, 11, 215, 'MED', NULL, 81),
(261, 11, 216, 'MED', NULL, 72),
(262, 11, 217, 'MED', NULL, 75),
(263, 11, 218, 'DEL', NULL, 82),
(264, 11, 219, 'DEL', NULL, 75),
(265, 11, 220, 'DEL', NULL, 74),
(266, 11, 221, 'DEL', NULL, 72),
(267, 11, 222, 'DEL', NULL, 77),
(268, 12, 137, 'ARQ', NULL, 82),
(269, 12, 223, 'ARQ', NULL, 73),
(270, 12, 224, 'ARQ', NULL, 70),
(271, 12, 225, 'DEF', NULL, 78),
(272, 12, 226, 'DEF', NULL, 82),
(273, 12, 108, 'DEF', NULL, 80),
(274, 12, 227, 'DEF', NULL, 81),
(275, 12, 228, 'DEF', NULL, 75),
(276, 12, 144, 'DEF', NULL, 70),
(277, 12, 229, 'DEF', NULL, 78),
(278, 12, 9, 'DEF', NULL, 74),
(279, 12, 230, 'MED', NULL, 87),
(280, 12, 231, 'MED', NULL, 76),

(281, 12, 232, 'MED', NULL, 78),
(282, 12, 233, 'MED', NULL, 75),
(283, 12, 150, 'MED', NULL, 72),
(284, 12, 234, 'MED', NULL, 79),
(285, 12, 235, 'MED', NULL, 71),
(286, 12, 236, 'MED', NULL, 72),
(287, 12, 90, 'DEL', NULL, 80),
(288, 12, 133, 'DEL', NULL, 77),
(289, 12, 237, 'DEL', NULL, 75),
(290, 12, 238, 'DEL', NULL, 70),
(291, 13, 239, 'ARQ', NULL, 78),
(292, 13, 240, 'ARQ', NULL, 72),
(293, 13, 241, 'DEF', NULL, 77),
(294, 13, 242, 'DEF', NULL, 78),
(295, 13, 243, 'DEF', NULL, 76),
(296, 13, 244, 'DEF', NULL, 72),
(297, 13, 245, 'DEF', NULL, 75),
(298, 13, 246, 'DEF', NULL, 74),
(299, 13, 247, 'DEF', NULL, 69),
(300, 13, 248, 'DEF', NULL, 71),
(301, 13, 249, 'MED', NULL, 81),
(302, 13, 250, 'MED', NULL, 74),
(303, 13, 251, 'MED', NULL, 73),
(304, 13, 252, 'MED', NULL, 78),
(305, 13, 253, 'MED', NULL, 71),
(306, 13, 254, 'MED', NULL, 75),
(307, 13, 255, 'MED', NULL, 72),
(308, 13, 256, 'MED', NULL, 79),
(309, 13, 237, 'DEL', NULL, 70),
(310, 13, 257, 'DEL', NULL, 78),
(311, 13, 258, 'DEL', NULL, 76),
(312, 13, 259, 'DEL', NULL, 75),
(313, 13, 260, 'DEL', NULL, 73),
(314, 14, 261, 'ARQ', NULL, 82),
(315, 14, 262, 'ARQ', NULL, 74),
(316, 14, 263, 'ARQ', NULL, 68),
(317, 14, 264, 'DEF', NULL, 78),
(318, 14, 265, 'DEF', NULL, 81),
(319, 14, 140, 'DEF', NULL, 76),
(320, 14, 266, 'DEF', NULL, 74),

(321, 14, 267, 'DEF', NULL, 72),
(322, 14, 268, 'DEF', NULL, 70),
(323, 14, 269, 'DEF', NULL, 71),
(324, 14, 270, 'MED', NULL, 84),
(325, 14, 271, 'MED', NULL, 82),
(326, 14, 272, 'MED', NULL, 75),
(327, 14, 273, 'MED', NULL, 74),
(328, 14, 274, 'MED', NULL, 76),
(329, 14, 275, 'MED', NULL, 70),
(330, 14, 276, 'MED', NULL, 71),
(331, 14, 277, 'DEL', NULL, 83),
(332, 14, 278, 'DEL', NULL, 77),
(333, 14, 279, 'DEL', NULL, 75),
(334, 14, 280, 'DEL', NULL, 72),
(335, 14, 205, 'DEL', NULL, 70),
(336, 15, 281, 'ARQ', NULL, 84),
(337, 15, 282, 'ARQ', NULL, 70),
(338, 15, 283, 'DEF', NULL, 82),
(339, 15, 165, 'DEF', NULL, 80),
(340, 15, 284, 'DEF', NULL, 79),
(341, 15, 285, 'DEF', NULL, 75),
(342, 15, 286, 'DEF', NULL, 76),
(343, 15, 287, 'DEF', NULL, 72),
(344, 15, 288, 'DEF', NULL, 74),
(345, 15, 289, 'DEF', NULL, 70),
(346, 15, 290, 'MED', NULL, 79),
(347, 15, 291, 'MED', NULL, 77),
(348, 15, 292, 'MED', NULL, 79),
(349, 15, 293, 'MED', NULL, 78),
(350, 15, 294, 'MED', NULL, 78),
(351, 15, 295, 'MED', NULL, 81),
(352, 15, 296, 'MED', NULL, 72),
(353, 15, 297, 'MED', NULL, 80),
(354, 15, 298, 'DEL', NULL, 80),
(355, 15, 299, 'DEL', NULL, 75),
(356, 15, 300, 'DEL', NULL, 73),
(357, 15, 301, 'DEL', NULL, 69),
(358, 15, 302, 'DEL', NULL, 77),
(359, 16, 303, 'ARQ', NULL, 76),
(360, 16, 304, 'ARQ', NULL, 68),

(361, 16, 305, 'DEF', NULL, 76),
(362, 16, 306, 'DEF', NULL, 78),
(363, 16, 307, 'DEF', NULL, 77),
(364, 16, 308, 'DEF', NULL, 77),
(365, 16, 116, 'DEF', NULL, 75),
(366, 16, 309, 'DEF', NULL, 74),
(367, 16, 310, 'DEF', NULL, 72),
(368, 16, 311, 'DEF', NULL, 70),
(369, 16, 312, 'MED', NULL, 84),
(370, 16, 313, 'MED', NULL, 79),
(371, 16, 314, 'MED', NULL, 76),
(372, 16, 126, 'MED', NULL, 80),
(373, 16, 315, 'MED', NULL, 77),
(374, 16, 128, 'MED', NULL, 74),
(375, 16, 316, 'MED', NULL, 73),
(376, 16, 129, 'MED', NULL, 70),
(377, 16, 131, 'DEL', NULL, 84),
(378, 16, 317, 'DEL', NULL, 76),
(379, 16, 318, 'DEL', NULL, 72),
(380, 16, 319, 'DEL', NULL, 69),
(381, 16, 320, 'DEL', NULL, 73),
(382, 17, 321, 'ARQ', NULL, 78),
(383, 17, 322, 'ARQ', NULL, 75),
(384, 17, 311, 'ARQ', NULL, 68),
(385, 17, 323, 'DEF', NULL, 80),
(386, 17, 324, 'DEF', NULL, 82),
(387, 17, 325, 'DEF', NULL, 83),
(388, 17, 326, 'DEF', NULL, 79),
(389, 17, 327, 'DEF', NULL, 75),
(390, 17, 328, 'DEF', NULL, 73),
(391, 17, 329, 'DEF', NULL, 70),
(392, 17, 330, 'MED', NULL, 82),
(393, 17, 331, 'MED', NULL, 88),
(394, 17, 332, 'MED', NULL, 81),
(395, 17, 333, 'MED', NULL, 76),
(396, 17, 334, 'MED', NULL, 74),
(397, 17, 335, 'MED', NULL, 70),
(398, 17, 336, 'MED', NULL, 72),
(399, 17, 337, 'MED', NULL, 72),
(400, 17, 338, 'DEL', NULL, 84),

(401, 17, 339, 'DEL', NULL, 76),
(402, 17, 340, 'DEL', NULL, 74),
(403, 17, 341, 'DEL', NULL, 73),
(404, 17, 342, 'DEL', NULL, 70),
(405, 18, 343, 'ARQ', NULL, 82),
(406, 18, 344, 'ARQ', NULL, 85),
(407, 18, 345, 'ARQ', NULL, 70),
(408, 18, 346, 'DEF', NULL, 84),
(409, 18, 227, 'DEF', NULL, 80),
(410, 18, 226, 'DEF', NULL, 83),
(411, 18, 142, 'DEF', NULL, 80),
(412, 18, 347, 'DEF', NULL, 79),
(413, 18, 348, 'DEF', NULL, 76),
(414, 18, 349, 'DEF', NULL, 74),
(415, 18, 350, 'DEF', NULL, 76),
(416, 18, 97, 'MED', NULL, 75),
(417, 18, 351, 'MED', NULL, 81),
(418, 18, 233, 'MED', NULL, 73),
(419, 18, 352, 'MED', NULL, 74),
(420, 18, 230, 'MED', NULL, 88),
(421, 18, 353, 'MED', NULL, 76),
(422, 18, 354, 'MED', NULL, 71),
(423, 18, 355, 'MED', NULL, 75),
(424, 18, 356, 'DEL', NULL, 84),
(425, 18, 357, 'DEL', NULL, 77),
(426, 18, 358, 'DEL', NULL, 71),
(427, 18, 359, 'DEL', NULL, 78),
(428, 19, 360, 'ARQ', NULL, 84),
(429, 19, 361, 'ARQ', NULL, 70),
(430, 19, 362, 'DEF', NULL, 82),
(431, 19, 363, 'DEF', NULL, 77),
(432, 19, 184, 'DEF', NULL, 79),
(433, 19, 364, 'DEF', NULL, 76),
(434, 19, 365, 'DEF', NULL, 73),
(435, 19, 366, 'DEF', NULL, 71),
(436, 19, 367, 'DEF', NULL, 70),
(437, 19, 368, 'DEF', NULL, 70),
(438, 19, 295, 'MED', NULL, 81),
(439, 19, 369, 'MED', NULL, 80),
(440, 19, 370, 'MED', NULL, 79),

(441, 19, 371, 'MED', NULL, 78),
(442, 19, 372, 'MED', NULL, 77),
(443, 19, 373, 'MED', NULL, 74),
(444, 19, 374, 'MED', NULL, 70),
(445, 19, 297, 'DEL', NULL, 85),
(446, 19, 375, 'DEL', NULL, 72),
(447, 19, 376, 'DEL', NULL, 74),
(448, 19, 377, 'DEL', NULL, 69),
(449, 19, 378, 'DEL', NULL, 67),
(450, 19, 379, 'DEL', NULL, 73),
(451, 20, 380, 'ARQ', NULL, 79),
(452, 20, 381, 'ARQ', NULL, 72),
(453, 20, 382, 'DEF', NULL, 76),
(454, 20, 383, 'DEF', NULL, 72),
(455, 20, 384, 'DEF', NULL, 80),
(456, 20, 385, 'DEF', NULL, 74),
(457, 20, 386, 'DEF', NULL, 70),
(458, 20, 387, 'DEF', NULL, 69),
(459, 20, 388, 'DEF', NULL, 71),
(460, 20, 389, 'MED', NULL, 79),
(461, 20, 390, 'MED', NULL, 78),
(462, 20, 391, 'MED', NULL, 80),
(463, 20, 392, 'MED', NULL, 77),
(464, 20, 393, 'MED', NULL, 76),
(465, 20, 394, 'MED', NULL, 74),
(466, 20, 292, 'MED', NULL, 68),
(467, 20, 395, 'MED', NULL, 82),
(468, 20, 200, 'DEL', NULL, 82),
(469, 20, 396, 'DEL', NULL, 78),
(470, 20, 397, 'DEL', NULL, 72),
(471, 20, 398, 'DEL', NULL, 76),
(472, 20, 399, 'DEL', NULL, 72),
(473, 21, 400, 'ARQ', NULL, 79),
(474, 21, 401, 'ARQ', NULL, 70),
(475, 21, 402, 'DEF', NULL, 82),
(476, 21, 403, 'DEF', NULL, 80),
(477, 21, 404, 'DEF', NULL, 75),
(478, 21, 405, 'DEF', NULL, 73),
(479, 21, 406, 'DEF', NULL, 76),
(480, 21, 220, 'DEF', NULL, 70),

(481, 21, 272, 'DEF', NULL, 72),
(482, 21, 407, 'MED', NULL, 82),
(483, 21, 408, 'MED', NULL, 80),
(484, 21, 399, 'MED', NULL, 74),
(485, 21, 409, 'MED', NULL, 77),
(486, 21, 410, 'MED', NULL, 72),
(487, 21, 336, 'MED', NULL, 73),
(488, 21, 411, 'MED', NULL, 74),
(489, 21, 412, 'MED', NULL, 69),
(490, 21, 394, 'DEL', NULL, 78),
(491, 21, 413, 'DEL', NULL, 76),
(492, 21, 414, 'DEL', NULL, 74),
(493, 21, 415, 'DEL', NULL, 72),
(494, 21, 416, 'DEL', NULL, 70),
(495, 22, 417, 'ARQ', NULL, 82),
(496, 22, 418, 'ARQ', NULL, 68),
(497, 22, 419, 'DEF', NULL, 78),
(498, 22, 420, 'DEF', NULL, 80),
(499, 22, 421, 'DEF', NULL, 81),
(500, 22, 422, 'DEF', NULL, 82),
(501, 22, 423, 'DEF', NULL, 80),
(502, 22, 424, 'DEF', NULL, 73),
(503, 22, 425, 'DEF', NULL, 71),
(504, 22, 426, 'DEF', NULL, 69),
(505, 22, 427, 'MED', NULL, 81),
(506, 22, 428, 'MED', NULL, 79),
(507, 22, 429, 'MED', NULL, 78),
(508, 22, 430, 'MED', NULL, 76),
(509, 22, 431, 'MED', NULL, 74),
(510, 22, 432, 'MED', NULL, 69),
(511, 22, 433, 'DEL', NULL, 82),
(512, 22, 434, 'DEL', NULL, 78),
(513, 22, 175, 'DEL', NULL, 74),
(514, 22, 435, 'DEL', NULL, 71);
